# M031AE-rs

./: Cargo.toml  README.md
src/: acmp01.rs  adc.rs  bpwm0.rs  clk.rs  ebi.rs  fmc.rs  gpio.rs  hdiv.rs  i2c0.rs  lib.rs  lib.src  pdma.rs  pwm0.rs  qspix.rs  rtc.rs  scs.rs  spix.rs  sys.rs  tmr01.rs  tmr23.rs  uart3.rs  uart4.rs  ui2c0.rs  usbd.rs  uspi1.rs  uuart0.rs  wdt.rs
src/acmp01/: acmp_calctl.rs  acmp_calsr.rs  acmp_ctl0.rs  acmp_ctl1.rs  acmp_status.rs  acmp_vref.rs
src/adc/: adc_adcalr.rs  adc_adcalstsr.rs  adc_adcher.rs  adc_adcmpr0.rs  adc_adcmpr1.rs  adc_adcr.rs  adc_addr0.rs  adc_addr1.rs  adc_addr10.rs  adc_addr11.rs  adc_addr12.rs  adc_addr13.rs  adc_addr14.rs  adc_addr15.rs  adc_addr2.rs  adc_addr29.rs  adc_addr3.rs  adc_addr4.rs  adc_addr5.rs  adc_addr6.rs  adc_addr7.rs  adc_addr8.rs  adc_addr9.rs  adc_adpdma.rs  adc_adsr0.rs  adc_adsr1.rs  adc_adsr2.rs  adc_cfdctl.rs  adc_esmpctl.rs
src/bpwm0/: bpwm_capctl.rs  bpwm_capien.rs  bpwm_capsts.rs  bpwm_clkpsc.rs  bpwm_cmpbuf0.rs  bpwm_cmpbuf5.rs  bpwm_cmpdat1.rs  bpwm_cmpdat2.rs  bpwm_cmpdat5.rs  bpwm_cntclr.rs  bpwm_cnten.rs  bpwm_ctl1.rs  bpwm_fcapdat0.rs  bpwm_fcapdat5.rs  bpwm_msken.rs  bpwm_pbuf.rs  bpwm_rcapdat1.rs  bpwm_rcapdat2.rs  bpwm_rcapdat3.rs  bpwm_ssctl.rs  bpwm_sstrg.rs  bpwm_status.rs  bpwm_wgctl1.rs
src/bpwm1/: bpwm_adcts0.rs  bpwm_adcts1.rs  bpwm_capif.rs  bpwm_capinen.rs  bpwm_clksrc.rs  bpwm_cmpbuf1.rs  bpwm_cmpbuf2.rs  bpwm_cmpbuf3.rs  bpwm_cmpbuf4.rs  bpwm_cmpdat0.rs  bpwm_cmpdat3.rs  bpwm_cmpdat4.rs  bpwm_cnt.rs  bpwm_ctl0.rs  bpwm_fcapdat1.rs  bpwm_fcapdat2.rs  bpwm_inten.rs  (+11 more)
(+599 files in other folders)
